--- a/index.html
+++ b/index.html
@@ -1,52 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>HTML5获取麦克风音频,输出到扬声器</title>
-	<meta charset="UTF-8">
-    <meta name="keywords" content="keyword1,keyword2,keyword3">
-    <meta name="description" content="this is my page">
-    <meta name="content-type" content="text/html; charset=UTF-8">
-    <script type="text/javascript">
-		var audioCtx;
-		try
-		{
-			audioCtx=new (window.AudioContext || window.webkitAudioContext)();
-		}
-		catch(e)
-		{
-			console.log("Your browser does not support AudioContext!");
-		}
-    navigator.getUserMedia=(navigator.getUserMedia || navigator.webkitGetUserMedia || 
-								navigator.mozGetUserMedia || navigator.msGetUserMedia);
-		if(navigator.getUserMedia) 
-		{
-			navigator.getUserMedia(
-      		{
-      			audio:true,
-            // video: { width: 1280, height: 720 }
-      		},
-      		function(stream)
-      		{
-      			var source=audioCtx.createMediaStreamSource(stream);
-          		var biquadFilter=audioCtx.createBiquadFilter();
-          		biquadFilter.type="lowshelf";
-          		biquadFilter.frequency.value=1000;
-          		biquadFilter.gain.value=25;
-          		source.connect(biquadFilter);
-          		biquadFilter.connect(audioCtx.destination);
-         	},
-      		function(err)
-      		{
-      			console.log("The following gUM error occured: "+err);
-      		});
-      	}
-      	else 
-      	{
-      		console.log("getUserMedia not supported on your browser!");
-      	}
-    </script>
-  </head>
-  <body>
-    This is my HTML page. <br>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  <input type="text" speech x-webkit-speech />
+
+  <input type="text" speech x-webkit-speech onwebkitspeechchange="alert(this.value)"/>
+
+</body>
 </html>
