--- a/index.html
+++ b/index.html
@@ -7,9 +7,47 @@
   <title>Document</title>
 </head>
 <body>
-  <input type="text" speech x-webkit-speech />
-
-  <input type="text" speech x-webkit-speech onwebkitspeechchange="alert(this.value)"/>
+  <div>
+      <input id="microphone" type="button" />
+  </div>
+  <script src="./js/01.js"></script>
+  <script>
+    var recorder;
+        var btnElem=document.getElementById("microphone");//获取ID
+        function initEvent() {
+            btnElem.addEventListener("touchstart", function(event) {
+                //event.preventDefault();//阻止浏览器默认行为
+                HZRecorder.get(function (rec) {
+                    recorder = rec;
+                    recorder.start();
+                });
+                      });
+            btnElem.addEventListener("touchend", function(event) {
+                //event.preventDefault();
+                HZRecorder.get(function (rec) {
+                     recorder.stop();
+                })
+                recorder.upload("/upload", function (state, e) {
+                    switch (state) {
+                        case 'uploading':
+                            //var percentComplete = Math.round(e.loaded * 100 / e.total) + '%';
+                            break;
+                        case 'ok':
+                            //alert(e.target.responseText);
+                            alert("上传成功");
+                            break;
+                        case 'error':
+                            alert("上传失败");
+                            break;
+                        case 'cancel':
+                            alert("上传被取消");
+                            break;
+                    }
+                });
+                            });
+        };
+        initEvent();
+  </script>
 
 </body>
 </html>
