--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div>
-      <input id="microphone" type="button" />
+      <input id="microphone" type="button" />啦啦啦
   </div>
-  <script src="./js/01.js"></script>
+  
   <script>
     var recorder;
         var btnElem=document.getElementById("microphone");//获取ID
@@ -48,6 +48,6 @@
         };
         initEvent();
   </script>
-
+  <script src="./js/01.js"></script>
 </body>
 </html>
